# myResearchBuddy

./: .gitignore  ACCEPTANCE_REPORT.md  Makefile  README.md  REMEDIATION_PLAN.md  test123.txt
backend/: pyproject.toml
backend/app/: citations.py  config.py  database.py  execution.py  ingestion.py  llm.py  main.py  models.py  schemas.py  storage.py  workflow.py
backend/research_pipeline_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_citations.py  test_execution.py  test_results_gating.py  test_schemas.py  test_workflow.py
docs/: design.md
examples/demo-project/: README.md  metrics.csv  part1.json
examples/demo-project/latex/: main.tex
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
prompts/: final.json  part1.json  part2.json  part3.json  part4.json
scripts/: dev.sh  doctor.sh  load_demo.py
