[project]
name = "research-pipeline-studio"
version = "0.1.0"
description = "Research Pipeline Studio backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "sqlmodel>=0.0.16",
  "pydantic>=2.6",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "jinja2>=3.1",
  "paramiko>=3.4",
  "rich>=13.7",
]

[project.optional-dependencies]
lint = ["ruff>=0.4", "black>=24.4"]

test = ["pytest>=8.0"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
