[project]
name = "research-progress-tracker"
version = "0.1.0"
description = "Research project progress tracker"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "sqlmodel>=0.0.16",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]

test = ["pytest>=8.0"]

[tool.ruff]
line-length = 100
